style 统一SDK代码优化